feat: add admin books CRUD

--- a/views/partials/admin-books-form.hbs
+++ b/views/partials/admin-books-form.hbs
@@ -14,11 +14,11 @@
 
 <div class="form-row mb-3">
   <label class="form-label" for="tel">Author</label>
-  <input class="form-control" type="tel" name="tel" id="tel" placeholder="Enter author" value="{{books.author}}">
+  <input class="form-control" name="author" id="tel" placeholder="Enter author" value="{{book.author}}">
 </div>
 <div class="form-row mb-3">
   <label class="form-label" for="description">Description</label>
-  <textarea class="form-control" id="description" name="description" rows="3">{{restaurant.description}}</textarea>
+  <textarea class="form-control" id="description" name="description" rows="3">{{book.description}}</textarea>
   <div class="form-row mb-3">
     <label class="form-label" for="image">Image</label>
     <input class="form-control" type="file" class="form-control-file" id="image" name="image">
