--- a/views/admin/create-book.hbs
+++ b/views/admin/create-book.hbs
@@ -1,4 +1,4 @@
-<form action="/admin/books" method="POST">
+<form action="/admin/books" method="POST" enctype="multipart/form-data">
   <div class="mb-4 text-center">
     <h1 class="h3 font-weight-normal mb-3">Create Books</h1>
   </div>
