feat: add categories CRUD

--- a/views/admin/books.hbs
+++ b/views/admin/books.hbs
@@ -1,3 +1,4 @@
+{{> admin-tabs route="books"}}
 <a href='/admin/books/create'>
   <button type="button" class="btn btn-primary">New Book</button>
 </a>
