--- a/views/partials/admin-tabs.hbs
+++ b/views/partials/admin-tabs.hbs
@@ -1,7 +1,7 @@
-<h1>餐廳後台</h1>
+<h1>書籍後台</h1>
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link {{#ifCond route 'restaurants'}}active{{/ifCond}}" href="/admin/restaurants">Restaurants</a>
+    <a class="nav-link {{#ifCond route 'books'}}active{{/ifCond}}" href="/admin/books">Books</a>
   </li>
   <li class="nav-item">
     <a class="nav-link {{#ifCond route 'users'}}active{{/ifCond}}" href="/admin/users">Users</a>
