feat: add state page

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -18,6 +18,88 @@
     </div>
   </div>
   <div class="mt-5 bg-white">
+    <div class="p-3 row justify-content-md-center">
+      <div class="col-4">
+        <h2>Not yet</h2>
+        <form action="/state/1" method="POST">
+          <select name="bookId" id="">
+            {{#each books}}
+            <option value="{{this.id}}">{{this.name}}</option>
+            {{/each}}
+          </select>
+          <button class="btn btn-primary" type="submit">Add</button>
+        </form>
+        <table class="table align-middle">
+          {{#each statedBooks}}
+          {{#ifCond this.stateId 1}}
+          <tr>
+            <th>{{this.Book.name}}</th>
+            <td>
+              <form action="/state/{{this.id}}?_method=DELETE" method="POST" style="display: inline;">
+                <button type="submit" class="btn btn-danger">X</button>
+              </form>
+            </td>
+          </tr>
+          {{/ifCond}}
+          {{/each}}
+        </table>
+      </div>
+
+      <div class="col-4">
+        <h2>Reading</h2>
+        <form action="/state/2" method="POST">
+          <select name="bookId" id="">
+            {{#each books}}
+            <option value="{{this.id}}">{{this.name}}</option>
+            {{/each}}
+          </select>
+          <button class="btn btn-primary" type="submit">Add</button>
+        </form>
+        <table class="table align-middle">
+          {{#each statedBooks}}
+          {{#ifCond this.stateId 2}}
+          <tr>
+            <th>{{this.Book.name}}</th>
+            <td>
+              <form action="/state/{{this.id}}?_method=DELETE" method="POST" style="display: inline;">
+                <button type="submit" class="btn btn-danger">X</button>
+              </form>
+            </td>
+          </tr>
+          {{/ifCond}}
+          {{/each}}
+        </table>
+      </div>
+
+      <div class="col-4">
+        <h2>Finished</h2>
+        <form action="/state/3" method="POST">
+          <select name="bookId" id="">
+            {{#each books}}
+            <option value="{{this.id}}">{{this.name}}</option>
+            {{/each}}
+          </select>
+          <button class="btn btn-primary" type="submit">Add</button>
+        </form>
+        <table class="table align-middle"> 
+          {{#each statedBooks}}
+          {{#ifCond this.stateId 3}}
+          <tr>
+            <th>{{this.Book.name}}</th>
+            <td>
+              <form action="/state/{{this.id}}?_method=DELETE" method="POST" style="display: inline;">
+                <button type="submit" class="btn btn-danger">X</button>
+              </form>
+            </td>
+          </tr>
+          {{/ifCond}}
+          {{/each}}
+        </table>
+          
+      </div>
+    </div>
+  </div>
+  <div class="mt-5 bg-white">
     <div class="bg-secondary">
       <h2>已評論書籍</h2>
     </div>
