--- a/views/partials/book-tabs.hbs
+++ b/views/partials/book-tabs.hbs
@@ -2,12 +2,12 @@
   <li class="nav-item">
     <a class="nav-link {{#ifCond route 'index'}}active{{/ifCond}}" href="/books">首頁</a>
   </li>
-  <li class="nav-item">
+  {{!-- <li class="nav-item">
     <a class="nav-link {{#ifCond route 'feeds'}}active{{/ifCond}}" href="/books/feeds">最新動態</a>
   </li>
   <li class="nav-item">
     <a class="nav-link {{#ifCond route 'topUsers'}}active{{/ifCond}}" href="/users/top">網紅</a>
-  </li>
+  </li> --}}
   <li class="nav-item">
     <a class="nav-link {{#ifCond route 'topBooks'}}active{{/ifCond}}" href="/books/top">Top 10 人氣書籍</a>
   </li>
