--- a/views/partials/experiences-form.hbs
+++ b/views/partials/experiences-form.hbs
@@ -8,8 +8,8 @@
 </div>
 
 <div class="form-row mb-3">
-  <label class="form-label" for="description">experience</label>
+  <label class="form-label" for="description">心得</label>
   <textarea class="form-control" id="text" name="text" rows="3">{{experience.text}}</textarea>
 </div>
-<button type="submit" class="btn btn-primary">Submit</button>
-<a class="btn btn-outline-secondary" href="javascript:history.back()">Back</a>
+<button type="submit" class="btn btn-primary">送出</button>
+<a class="btn btn-outline-secondary" href="javascript:history.back()">返回</a>
