--- a/views/users/experiences.hbs
+++ b/views/users/experiences.hbs
@@ -1,5 +1,5 @@
 <h1>讀書心得</h1>
-<a href="/experiences/create" class="btn btn-primary">new experience</a>
+<a href="/experiences/create" class="btn btn-primary">建立心得</a>
 
 <div class="row mt-3">
   {{#each experiences}}
@@ -20,14 +20,14 @@
         <div class="d-flex">
           <a href="/experiences/{{this.id}}" class="btn btn-primary m-1">Show</a>
           {{#if this.isHimself}}
-          <a href="/experiences/{{this.id}}/edit" class="btn btn-primary m-1">Edit</a>
+          <a href="/experiences/{{this.id}}/edit" class="btn btn-primary m-1">編輯</a>
           <form action="/experiences/{{this.id}}?_method=DELETE" method="POST">
-            <button class="btn btn-danger m-1">Delete</button>
+            <button class="btn btn-danger m-1">刪除</button>
           </form>
           {{else}}
             {{#if ../user.isAdmin}}
               <form action="/experiences/{{this.id}}?_method=DELETE" method="POST">
-                <button class="btn btn-danger m-1">Delete</button>
+                <button class="btn btn-danger m-1">刪除</button>
               </form>
             {{/if}}
           {{/if}}
