--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -21,7 +21,7 @@
             <a href="/users/{{user.id}}" class="nav-link">Profile</a>
           </li>
           <li class="nav-item">
-            <a href="/logout"><button class="btn btn-outline-success my-sm-0 my-2">Logout</button></a>
+            <a href="/logout"><button class="btn btn-outline-success my-sm-0 my-2">登出</button></a>
           </li>
         </ul>
       </div>
