--- a/views/top-books.hbs
+++ b/views/top-books.hbs
@@ -7,7 +7,10 @@
     <div class="card bg-white mt-3">
       <div class="card-body row">
         <div class="col">
-          <img src="{{this.image}}">
+          <a href="/books/{{this.id}}">
+            <img src="{{this.image}}">
+          </a>
+          
         </div>
         <div class="col">
           <h5 class="card-title">{{this.name}}</h5>
