--- a/views/users/create-experience.hbs
+++ b/views/users/create-experience.hbs
@@ -1,6 +1,6 @@
 <form action="/experiences" method="POST">
   <div class="mb-4 text-center">
-    <h1 class="h3 font-weight-normal mb-3">Create Experience</h1>
+    <h1 class="h3 font-weight-normal mb-3">建立心得</h1>
   </div>
   {{> experiences-form}}
 </form>
