--- a/views/users/edit-experience.hbs
+++ b/views/users/edit-experience.hbs
@@ -1,6 +1,6 @@
 <form action="/experiences/{{experience.id}}?_method=PUT" method="POST">
   <div class="mb-4 text-center">
-    <h1 class="h3 font-weight-normal mb-3">Edit Experience</h1>
+    <h1 class="h3 font-weight-normal mb-3">編輯心得</h1>
   </div>
   {{> experiences-form}}
 </form>
